infrastructure/seaweedfs-operator/seaweedfs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: seaweedfs
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "seaweedfs.mmontes-internal.duckdns.org"
  rules:
    - backendRefs:
        - name: seaweedfs-admin
          port: 23646
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: seaweedfs-s3
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "s3.mmontes-internal.duckdns.org"
  rules:
    - backendRefs:
        - name: seaweedfs-s3
          port: 8333
